Fix spacings

--- a/style.css
+++ b/style.css
@@ -170,7 +170,6 @@ h1 span {
 
 .trending-container {
   max-width: 1204px;
-  gap: 0;
 }
 
 .topics-line {
@@ -237,13 +236,6 @@ h2 {
 
 .topic-card button:hover {
   background-color: var(--cyan-hover);
-}
-
-.topics {
-  margin-bottom: 50px;
-}
-.hrtopic {
-  margin-bottom: 52.5px;
 }
 
 /* The latest trends css */
@@ -467,7 +459,7 @@ h3 {
   display: flex;
   flex-direction: row;
   gap: 60px;
-  margin: 50px auto;
+  margin: 0 auto;
   max-width: 1204px;
 }
 h2 {
